[fix] bug white bar when overflow and fit mobile error

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -13,20 +13,12 @@
 }
 
 .App {
+  display: block;
   text-align: center;
   background-color: var(--background-color);
   color: var(--text-color);
-}
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .Theme {
