--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,10 +1,22 @@
-body {
+
+html, body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overscroll-behavior: none;
+  height: 100%;
+  width: 100%;
+}
+
+@media (max-width: 400px) {
+  html, body {
+    width: 100%;
+    height: 100%;
+    overscroll-behavior: none;
+  }
 }
 
 code {
